assets/index.css
/* ... */
@media (max-width: 480px){
    *{
        overflow-x: hidden;
    }
    html{
        max-width: 100vw;
    }
    body{
        max-width: 100vw;
        width: auto;
        overflow-x:visible;
        white-space:nowrap;
    }
    .header-text{
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
        width: 70%;
        left: 17%;
    }
    .left-side{
        width: 100%;
    }
    .hitext{
        text-align: center;
        width: 100%;
    }
    .left-upper{
        width: 100%;
    }
    .header-text a{
        font-size: 14px;
    }
    .hitext p{
        font-size: 30px;
    }
    .left-1, .left-3{
        text-align: center;
    }
    .left-2{
        width: 100%;
        justify-content: space-evenly;
    }
    .landing-page{
        flex-direction: column;
        margin-left: 0;
        display: flex;
        margin-top: 100px;
        width: 100%;
        max-width: 100%;
    }
    .right-side img, .circle1{
        transform: scale(0.6);
        margin-left: -15%;
    }
    .right-side img{
        margin-left: -20%;
    }
    .right-side{
        margin-left: 0;
        margin-top: -100px;
    }
    .left-side{
        justify-content: center;
    }
    .left-1 p{
        font-size: 20px;
    }
    .left-2 button{
        width: 100px;
        height: 35px;
        font-size: 14px;
    }
    .left-2 img{
        transform: scale(0.65);
        margin-bottom: -6px;
    }
    .left31{
        font-size: 15.45px;    
    }
    .left32{
        font-size: 13.9px;
    }
    .black-bar{
        position: absolute;
        margin-top: 350px;
        height: 80px;
    }
    .black-bar h1{
        font-size: 25px;
    }
    .black-bar p{
        font-size: 13px;
    }
    .about-me{
        max-width: 100%;
        margin-left: 0;
        margin-top: 120%;
        flex-direction: column;
        text-align: center;
    }
    .about-me h1, .projects h1{
        font-size: 26px;
    }
    .about-me h2{
        font-size: 16.5px;
    }
    .about-me p, .projects p{
        font-size: 14px;
        text-wrap: wrap;
    }
    .about-right-side img{
        display: none;
    }
    .projects{
        margin-top: 5%;
        margin-left: 0;
        text-align: center;
    }

    .projects-grid{
        margin-left: 0;
        max-width: 100%;
        width: 100%;
        column-gap: 5px;
        display: flex;
        flex-direction: column;
        margin-top: 0;
        align-items: center;
    }
    .prj1, .prj2, .prj3{
        transform: scale(0.8) !important;
    }
    .prj2hidden{
        transform: scale(0.8);
    }
    .prj2hidden p{
        font-size: 10px;
    }
    .prj2hidden h1{
        font-size: 13px;
    }
    .form{
        flex-direction: column;
        margin-left: 0;
        text-align: center;
        max-width: 100%;
        justify-content: center;
    }
    .form-left-side h1{
        font-size: 26px;
    }
    .form-left-side p, .form-left-side span{
        font-size: 14px;
    }
    .name-input{
        display: block;
        margin-bottom: 8px;
    }
    .email-input{
        width: 300px;
    }
    .message-input{
        width: 300px;
    }
    .pages-links{
        flex-direction: column;
        margin-top: 10%;
    }
    .box1, .box2{
        transform: scale(0.8);
        align-self: center;
    }
    .prj2{
        margin-left: 0;
    }
    .prj2:hover .prj2hidden{
        transform: scale(0.9);
    }
    .prj2.hover{
        transform: scale(0.9);
        filter: grayscale(0);
    }
    .prj2hidden:hover{
        opacity: 1;
        transform: scale(1);
    }
    .prj2 p{
        font-size: 13px;
    }
    .prj2 h1{
        font-size: 16px;
    }
    .name-input{
        margin-right: 0;
        margin-left: 0;
    }
    .surname-input{
        margin-left: 0;
        margin-right: 0;
    }
    .namesur{
        display: flex;
        flex-direction: column;
        align-items: center;
    }
}
@media(max-width:409px){
    .black-bar{
        width: 100%;
        margin-left: -2%;
    }
    .right-side img, .circle1{
        transform: scale(0.55);
        margin-left: -25%;
    }
    .right-side img{
        margin-left: -30%
    }
    .about-me{
        margin-top: 130%;
    }
    .about-me h1, .projects h1{
        font-size: 22px;
    }
    .about-me h2{
        font-size: 12.5px
    }
    .about-me p, .projects p{
        font-size: 11.5px;
        text-wrap: wrap;
    }
    .prj1, .prj2, .prj3{
        transform: scale(0.75) !important;
    }
    .prj2hidden{
        transform: scale(0.75);
    }
    .prj2:hover{
        transform: scale(0.85);
    }
    .prj2hidden:hover{
        transform: scale(0.9);
    }
        .projects-grid{
        width: 100%;
        align-items: center;
    }
}

